@@ -37,10 +37,10 @@
 
 						<p>
 						<ol type="I">
-						  <li><b>Install NUnit 2.0.</b>
 							<li><b>Download and unzip NUnitAsp.</b>
-							<li><b>Create an NUnitAsp virtual directory in IIS</b></li>
-							<li><b>Test the installation</b>
+						  <li><b>Install NUnit 2.0.</b>
+							<li><b>Create an NUnitAsp virtual directory in IIS.</b></li>
+							<li><b>Test the installation.</b>
 						</ol>
 						</p>
 
@@ -48,17 +48,17 @@
 
 						<p>
 						<ol type="I">
-							<li><b>Install NUnit 2.0.</b>
-							<ol>
-								<li>Double-click the Nunit.msi installation file in the <a href="../bin">bin</a> directory.</li>
-							</ol>
-
-							<br />
 							<li><b>Download and unzip NUnitAsp.</b>
 							<ol>
 								<li>NUnitAsp may be downloaded from the NUnitAsp home page, <a href="http://nunitasp.sourceforge.net">nunitasp.sourceforge.net</a>.</li>
 								<li>Unzip the NUnitAsp package into a directory of your choice, such as "C:\Program Files\NUnitAsp"</li>
 							</ol></li>
+
+							<br />
+							<li><b>Install NUnit 2.0.</b>
+							<ol>
+								<li>Double-click the Nunit.msi installation file in the bin directory and follow the directions.</li>
+							</ol>
 
 							<br />
 							<li><b>Create an NUnitAsp virtual directory in IIS.</b></li>
